[gd_scene load_steps=29 format=2]

[ext_resource path="res://cycle/coin.png" type="Texture" id=1]
[ext_resource path="res://cycle/coin.gd" type="Script" id=2]
[ext_resource path="res://cycle/coin_ding.wav" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=25]
friction = 0.6
bounce = 0.5

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 14, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 28, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 42, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 70, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 84, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 98, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 126, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 140, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 154, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 182, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 196, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 210, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 238, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 266, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 14, 14 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[sub_resource type="CircleShape2D" id=3]
radius = 33.0606

[node name="coin" type="RigidBody2D"]
collision_layer = 4
mode = 2
physics_material_override = SubResource( 25 )
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="pickup" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collision_shape_2d2" type="CollisionShape2D" parent="pickup"]
shape = SubResource( 3 )

[node name="iframes" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="ding_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0
bus = "Effects"

[connection signal="body_entered" from="." to="." method="_on_coin_body_entered"]
[connection signal="body_entered" from="pickup" to="." method="_on_pickup_body_entered"]
[connection signal="timeout" from="iframes" to="." method="_on_iframes_timeout"]
